--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.57.4",
+    "framer-motion": "^12.23.12",
     "next": "^15.0.3",
+    "next-sanity": "^9.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3.57.4",
-    "next-sanity": "^9.4.7",
-    "@sanity/vision": "^3.57.4",
-    "@sanity/image-url": "^1.0.2"
+    "sanity": "^3.57.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
