--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^4.0.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.57.4",
     "framer-motion": "^12.23.12",
