--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "eslint"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "framer-motion": "^12.23.12",
     "next": "^15.0.3",
     "next-sanity": "^9.4.7",
+    "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.57.4"
